Fix icon sizes on mobile

--- a/style/main.css
+++ b/style/main.css
@@ -410,51 +410,51 @@ hr {
     text-align: center;
     font-weight: bold;
     z-index: 10;
-    font-size: 55px; }
+    font-size: 55px;
+    background-size: 106.25px 106.25px !important;
+     }
+   @media screen and (max-width: 520px) {
+     .tile .tile-inner {
+    background-size: 57.5px 57.5px !important;
+           } }
+
   .tile.tile-2 .tile-inner {
     background: url(../img/dorans-blade.png);
-    background-size: 106.25px 106.25px;
     background-repeat: no-repeat;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
   .tile.tile-4 .tile-inner {
     background: url(../img/vampiric-scepter.png);
-    background-size: 106.25px 106.25px;
     background-repeat: no-repeat;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
   .tile.tile-8 .tile-inner {
     color: #f9f6f2;
     background: url(../img/hexdrinker.png);
-    background-size: 106.25px 106.25px;
     background-repeat: no-repeat;}
   .tile.tile-16 .tile-inner {
     color: #f9f6f2;
     background: url(../img/pickaxe.png);
-    background-size: 106.25px 106.25px;
     background-repeat: no-repeat;}
   .tile.tile-32 .tile-inner {
     color: #f9f6f2;
     background: url(../img/bf-sword.png);
-    background-size: 106.25px 106.25px;
     background-repeat: no-repeat; }
   .tile.tile-64 .tile-inner {
     color: #f9f6f2;
     background: url(../img/elder-lizard.png) ;
-        background-size: 106.25px 106.25px;
     background-repeat: no-repeat; }
   .tile.tile-128 .tile-inner {
     color: #f9f6f2;
     background: url(../img/last-whisper.png);
-    background-size: 106.25px 106.25px;
     background-repeat: no-repeat;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.2381), inset 0 0 0 1px rgba(255, 255, 255, 0.14286);
     font-size: 45px; }
     @media screen and (max-width: 520px) {
       .tile.tile-128 .tile-inner {
-        font-size: 25px; } }
+        font-size: 25px;
+        } }
   .tile.tile-256 .tile-inner {
     color: #f9f6f2;
     background: url(../img/phantom-dancer.png);
-    background-size: 106.25px 106.25px;
     background-repeat: no-repeat;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.31746), inset 0 0 0 1px rgba(255, 255, 255, 0.19048);
     font-size: 45px; }
@@ -464,7 +464,6 @@ hr {
   .tile.tile-512 .tile-inner {
     color: #f9f6f2;
     background: url(../img/bloodthirster.png);
-    background-size: 106.25px 106.25px;
     background-repeat: no-repeat;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.39683), inset 0 0 0 1px rgba(255, 255, 255, 0.2381);
     font-size: 45px; }
@@ -474,7 +473,6 @@ hr {
   .tile.tile-1024 .tile-inner {
     color: #f9f6f2;
     background: url(../img/infinity-edge.png);
-    background-size: 106.25px 106.25px;
     background-repeat: no-repeat;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.47619), inset 0 0 0 1px rgba(255, 255, 255, 0.28571);
     font-size: 35px; }
@@ -484,7 +482,6 @@ hr {
   .tile.tile-2048 .tile-inner {
     color: #f9f6f2;
     background: url(../img/trinity-force.png);
-    background-size: 106.25px 106.25px;
     background-repeat: no-repeat;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
     font-size: 35px; }
@@ -494,7 +491,6 @@ hr {
   .tile.tile-super .tile-inner {
     color: #f9f6f2;
     background: url(../img/zhonyas-ring.png);
-    background-size: 106.25px 106.25px;
     background-repeat: no-repeat;
     font-size: 30px; }
     @media screen and (max-width: 520px) {
